--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1>Welcome to Accio Jobs!</h1>
+<h1> <i> Welcome to Accio Jobs!</i></h1>
 </body>
 
 </html>
